--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,14 @@ main > .main > h2 {
   text-align: center;
 }
 
+.main > h1 {
+  font-size: 3em;
+}
+
+.main > h2 {
+  font-size: 2.5em;
+}
+
 main > .main > form {
   max-width: 550px;
   margin: 6em auto 1em;
@@ -232,7 +240,7 @@ footer > p > a:hover {
 
   header > nav > a {
     font-size: 1.3rem;
-    padding: 0.8em;
+    padding: 0.8em 0;
     margin: 0 1em;
   }
 
